<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name" translatable="false">"Aurora Store"</string>
    <string name="download_speed_bytes" translatable="false">%1$d B/s</string>
    <string name="download_speed_kb" translatable="false">%1$s KB/s</string>
    <string name="download_speed_mb" translatable="false">%1$s MB/s</string>
    <string name="about_wiki_title">Wiki</string>
    <string name="about_wiki_summary">Find answers to frequently asked questions (F.A.Q.), troubleshooting steps and more</string>
    <string name="about_bhim">"BHIM - UPI"</string>
    <string name="about_bhim_summary">"Donate via UPI"</string>
    <string name="about_bitcoin_bch">"Bitcoin Cash"</string>
    <string name="about_bitcoin_bch_summary">"Donate via Bitcoin Cash (BCH)"</string>
    <string name="about_bitcoin_btc">"Bitcoin"</string>
    <string name="about_bitcoin_btc_summary">"Donate via Bitcoin (BTC)"</string>
    <string name="about_bitcoin_eth">"Ethereum"</string>
    <string name="about_bitcoin_eth_summary">"Donate via Ethereum (ETH)"</string>
    <string name="about_fdroid">"F-Droid"</string>
    <string name="about_fdroid_summary">"Get the Aurora Store via F-Droid."</string>
    <string name="about_gitlab">"GitLab"</string>
    <string name="about_gitlab_summary">"Get the Aurora Store source code from Aurora OSS on GitLab."</string>
    <string name="about_libera">"Liberapay"</string>
    <string name="about_libera_summary">"Become a patron on Liberapay"</string>
    <string name="about_paypal">PayPal</string>
    <string name="about_paypal_summary">"Donate via PayPal"</string>
    <string name="about_telegram">"Telegram"</string>
    <string name="about_telegram_summary">"Join the Aurora Support group for discussions or suggestions."</string>
    <string name="about_xda">"XDA Forums"</string>
    <string name="about_xda_summary">"See the Aurora Store XDA thread for discussions or suggestions."</string>
    <string name="account_anonymous">"Anonymous"</string>
    <string name="account_google">"Google"</string>
    <string name="account_login_using">Log in using</string>
    <string name="account_logout">Log out from Aurora</string>
    <string name="account_login_trouble">Having trouble logging in? Click below to spoof your device.</string>
    <string name="action_back">"Back"</string>
    <string name="action_whitelist">"Whitelist"</string>
    <string name="action_whitelist_add">"Add to whitelist"</string>
    <string name="action_cancel">"Cancel"</string>
    <string name="action_clear">"Clear"</string>
    <string name="action_close">"Close"</string>
    <string name="action_copy">"Copy"</string>
    <string name="action_copy_link">"Copy link"</string>
    <string name="action_disable">"Disable"</string>
    <string name="action_export">"Export"</string>
    <string name="action_import">"Import"</string>
    <string name="action_favourite">"Favourite"</string>
    <string name="action_filter">"Filters"</string>
    <string name="action_filter_all">"All"</string>
    <string name="action_filter_apply">"Apply"</string>
    <string name="action_filter_apps_with_ads">"Apps with ads"</string>
    <string name="action_filter_downloads">"Downloads"</string>
    <string name="action_filter_gsf_dependent_apps">"GSF dependent"</string>
    <string name="action_filter_misc">"Misc"</string>
    <string name="action_filter_paid_apps">"Paid"</string>
    <string name="action_filter_rating">"Ratings"</string>
    <string name="action_finish">"Finish"</string>
    <string name="action_get_local_apk">"Save app bundle"</string>
    <string name="action_grant">"Grant"</string>
    <string name="action_granted">"Granted"</string>
    <string name="action_ignore">"Ignore"</string>
    <string name="action_install">"Install"</string>
    <string name="action_install_microG">"Install microG Bundle"</string>
    <string name="action_installations">"Installations"</string>
    <string name="action_installing">"Installing"</string>
    <string name="action_join">"Join"</string>
    <string name="action_later">"Later"</string>
    <string name="action_leave">"Leave"</string>
    <string name="action_logout">Log out</string>
    <string name="action_next">"Next"</string>
    <string name="action_ok">"Okay"</string>
    <string name="action_open">"Open"</string>
    <string name="action_pending">"Pending"</string>
    <string name="action_post">"Post"</string>
    <string name="action_remove_all">"Remove all"</string>
    <string name="action_request_analysis">Request new analysis</string>
    <string name="action_restart">"Restart"</string>
    <string name="action_resume">"Resume"</string>
    <string name="action_search">"Search"</string>
    <string name="action_select_all">"Select all"</string>
    <string name="action_share">"Share"</string>
    <string name="action_uninstall">"Uninstall"</string>
    <string name="action_uninstall_success">"Successfully uninstalled"</string>
    <string name="action_home_screen">Add to home screen</string>
    <string name="action_info">"App info"</string>
    <string name="action_update">"Update"</string>
    <string name="action_update_all">"Update all"</string>
    <string name="details_beta">"Beta program"</string>
    <string name="details_beta_subscribed">"You're a beta tester"</string>
    <string name="details_beta_available">"Join beta program?"</string>
    <string name="details_beta_description">"You will see new features and bugs before the public does. Give your feedback to developers to help them improve."</string>
    <string name="details_beta_delay">"Enrollment may take some time, you can check status later."</string>
    <string name="details_changelog">"Changelog"</string>
    <string name="details_changelog_unavailable">"Changelog not provided"</string>
    <string name="details_contains_ads">"Contains ads"</string>
    <string name="details_dependencies">"Dependencies"</string>
    <string name="details_description">"Description"</string>
    <string name="details_dev_address">"Address"</string>
    <string name="details_dev_details">"Developer contact"</string>
    <string name="details_dev_email">"Email"</string>
    <string name="details_dev_profile">"Developer profile"</string>
    <string name="details_dev_website">"Website"</string>
    <string name="details_free">"Free"</string>
    <string name="details_gsf_dependent">"Requires GSF"</string>
    <string name="details_more_about_app">"More about app"</string>
    <string name="details_no_ads">"No ads"</string>
    <string name="details_no_app_match">"No app match found"</string>
    <string name="details_no_favourites">"No favourite apps found"</string>
    <string name="details_no_dependencies">"No dependencies"</string>
    <string name="details_no_permission">"No permissions"</string>
    <string name="details_no_updates">"No updates available"</string>
    <string name="details_paid">"Paid"</string>
    <string name="details_permission">"Permission"</string>
    <string name="details_data_safety_collect">Data that this app may collect</string>
    <string name="details_data_safety_collect_none">The developer says this app doesn\'t collect user data.</string>
    <string name="details_data_safety_shared">Data that this app may share</string>
    <string name="details_data_safety_share_none">The developer says this app doesn\'t share user data with other companies or organizations.</string>
    <string name="details_data_safety_title">Data safety</string>
    <string name="details_data_safety_subtitle">Data privacy and security practices declared by developer</string>
    <string name="details_privacy">"Privacy"</string>
    <string name="details_ratings">"Rating and reviews"</string>
    <string name="details_ratings_title_hint">"Review title"</string>
    <string name="details_think_this_app">"What do you think about this app?"</string>
    <string name="download_cancel_all">"Cancel all"</string>
    <string name="download_canceled">"Cancelled"</string>
    <string name="download_clear_finished">Clear finished</string>
    <string name="download_completed">"Download completed"</string>
    <string name="download_eta_calculating">"Calculating"</string>
    <string name="download_eta_hrs">%1$dh %2$dm %3$ds left</string>
    <string name="download_eta_min">%1$dm %2$ds left</string>
    <string name="download_eta_sec">%1$ds left</string>
    <string name="download_failed">"Download failed"</string>
    <string name="download_force_clear_all">"Force clear all"</string>
    <string name="download_metadata">"Getting metadata"</string>
    <string name="download_none">"No downloads"</string>
    <string name="download_pause_all">"Pause all"</string>
    <string name="download_paused">"Paused • <xliff:g id="completed_downloads">%1$d</xliff:g> / <xliff:g id="all_downloads">%2$d</xliff:g>"</string>
    <string name="download_progress">"Downloading • <xliff:g id="completed_downloads">%1$d</xliff:g> / <xliff:g id="all_downloads">%2$d</xliff:g> • <xliff:g id="speed">%3$s</xliff:g>"</string>
    <string name="download_queued">"Queued"</string>
    <string name="download_resume_all">"Resume all"</string>
    <string name="download_speed_estimating">"Estimating"</string>
    <string name="exodus_no_tracker">"Contains no known trackers"</string>
    <string name="exodus_tracker_desc">This version of the app may still contain more trackers not present yet in the Exodus Privacy\'s database.</string>
    <string name="exodus_powered">"Powered by Exodus Privacy"</string>
    <string name="exodus_progress">"Checking for trackers…"</string>
    <string name="exodus_substring">known trackers(s) found in</string>
    <string name="exodus_report_trackers"><xliff:g id="number_of_trackers">%1$d</xliff:g> known trackers(s) found in <xliff:g id="app_version_name">%2$s</xliff:g></string>
    <string name="exodus_view_report">"View report"</string>
    <string name="filter_review_all">"All"</string>
    <string name="filter_latest">"Latest"</string>
    <string name="filter_review_critical">"Critical"</string>
    <string name="filter_review_five">"Five"</string>
    <string name="filter_review_four">"Four"</string>
    <string name="filter_review_one">"One"</string>
    <string name="filter_review_positive">"Positive"</string>
    <string name="filter_review_three">"Three"</string>
    <string name="filter_review_two">"Two"</string>
    <string name="installer_am_unavailable">Install App Manager or change the installer.</string>
    <string name="installer_root_unavailable">No root access. Grant it or change the installer.</string>
    <string name="installer_shizuku_unavailable">Shizuku is not installed or set up properly.</string>
    <string name="installer_service_available">"Aurora Services is available and ready to install."</string>
    <string name="installer_service_unavailable">Install Aurora Services 1.0.9 or above, or change the installer.</string>
    <string name="installer_service_misconfigured">Set up Aurora Services and grant all permissions first.</string>
    <string name="installer_status_failure">"Installer failed"</string>
    <string name="installer_status_failure_blocked">"Installation was blocked"</string>
    <string name="installer_status_failure_session">"Could not create session"</string>
    <string name="device_info_phone_number">"Phone Number"</string>
    <string name="device_info_serial">"Serial"</string>
    <string name="device_info_device">"Device"</string>
    <string name="device_info_imei">"IMEI"</string>
    <string name="title_requests">"Requests"</string>
    <string name="request_an_app">Request an app</string>
    <string name="request_hint_app_name">App name</string>
    <string name="request_hint_choose_app">Choose an app</string>
    <string name="request_hint_note">Note (optional)</string>
    <string name="request_submit">Submit</string>
    <string name="request_your_requests">Your requests</string>
</resources>